# sdl-test

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  sdl_test.c  shmupsy.c
src/data/: data.h
src/utility/: CMakeLists.txt  utility.c  utility.h
